doctor profile now fully works
version 62 patient/version 9 doctor
added dynamic home screen
last updates working
news working
buttons working
version 63 patient
disabled screen rotation for investigation
added home screen updating functionality
version 64 patient
removed null if doctor specialities is empty
fixed parsing data crash on doctor schedule
version 65 patient
fixed cities list
version 66 patient
fixed doctor cluster list open
fixed doctors empty map
version 68 patient/version 10 doctor
fixed videocall camera/audio toggles not working when moving to background and to foreground
fixed videocall on changing orientation, it reconnects
refactored videocall screen to remove unused, boilerplate code
moved videocall state to viewmodel
updated leak canary
patients appointments now sort by datedate with most recent on top
fixed close icons on bottom dialogs
fixed navigation crash and back button
fixed map icon
removed null in doctors list
reduced amount of last updates on home screen
version 70 patient/version 11 doctor
videocall now in picture in picture mode (> android API 12)
videocall moved to another activity to support pip and deeplinks
fixed doctor navigation
fixed doctor fields, now everything is editable
fixed schedule creation, when online mode was not togglable
version 71 patient/version 11 doctor
multiple emergency contacts, currently bug with type, type field don't update for some reason
version 72 patient/version 12 doctor
added test version of address search and showing marker of address on map
version 73 patient/version 14 doctor
fully implemented address search with search bar
with predictions list
and map click
version 74 patient/version 15 doctor
fixed emergency contact type
fixed keyboard on profile address
removed short address field from profile, because there is new screen for that
fixed doctors map plus minus buttons, when doctor is unselected
tapping on doctors map now hides doctor
fixed videocall participant name




